implemented API updated swagger added DB Support
