# swagger.yaml
@@ -125,6 +125,24 @@ paths:
       responses:
         200:
           description: "success"
+  /users/{email}/rules:
+    get:
+      tags:
+      - "user"
+      summary: "Get all rules of a certain user"
+      operationId: "getRulesOfEmail"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "email"
+        in: "path"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "success"
+        404:
+          description: "not found"
   /rules/{id}:
     get:
       tags:
